# incolume.py.fictitium

./: .gitignore  README.md  pyproject.toml
gustavo0121/listagem_1/: E01_02.py  E01_03.py  E01_04.py  E01_05.py  E01_06.py  E01_07.py  E01_08.py  E01_09.py  E01_1.py  E01_10.py  E01_11.py  E01_12.py  E01_13.py  E01_14.py  E01_15.py  E01_16.py  E01_18.py
gustavo0121/listagem_15/: E15_01.py
gustavo0121/listagem_2/: E02_01.py  E02_02.py  E02_03.py  E02_04.py  E02_05.py  E02_06.py  E02_07.py  E02_08.py  E02_09.py  E02_12.py  E02_14.py
gustavo0121/listagem_3/: E03_01.py  E03_02.py  E03_03.py  E03_04.py  E03_05.py  E03_06.py  E03_08.py  E03_09.py  E03_11.py  E03_12.py  E03_13.py  E03_14.py  E03_15.py  E03_16.py  E03_17.py  E03_18.py  E03_19.py  E03_20.py  E03_21.py  E03_22.py  E03_23.py  E03_24.py  E03_25.py  E03_26.py  E03_28.py  E03_29.py
gustavo0121/listagem_4/: E04_03.py  E04_04.py  E04_05.py  E04_06.py  E04_07.py  E04_08.py  E04_09.py  E04_10.py  E04_11.py  E04_12.py  E04_13.py  E04_14.py  E04_15.py  E04_16.py  E04_17.py  E04_18.py  E04_19.py  E04_20.py  E04_21.py  E04_22.py
gustavo0121/listagem_5/: E05_01.py
gustavo0121/listagem_6/: E06_01.py  E06_02.py  E06_03.py  E06_04.py  E06_05.py  E06_06.py  E06_07.py  E06_08.py  E06_09.py  E06_10.py  E06_11.py  E06_12.py  E06_13.py  E06_14.py  E06_15.py  E06_19.py  E06_20.py
gustavo0121/listagem_8/: E08_01.py
