[tool.poetry]
name = "incolume-py-fictitium"
version = "0.2.0a0"
description = "Resolução dos exercícios do Curso \"Treinamento Python\"."
authors = ["Gustavo0121 <146298926+Gustavo0121@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "incolume"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"


[tool.poetry.group.qa.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
pydocstyle = "^6.3.0"
pylint = "^3.0.1"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
